--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             id="logo1"
           />
         </a>
-
+        <i class="fas fa-bars menu-toggle"></i>
         <div class="pages">
           <a href="homepage.html">HOME</a>
           <a href="">LISTINGS</a>
