--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
   </head>
   <body>
     <nav>
+      <img src="images/purewhite.jpg" alt="" class="bg" />
       <div class="navContainer">
-        <a href="homepage.html"
-          ><img
+        <a href="">
+          <img
             src="https://img1.wsimg.com/isteam/ip/067a4d42-19e8-46d9-9bed-578bf62dd44e/blob-6c0c2e0.png/:/rs=w:536,h:167,cg:true,m/cr=w:536,h:167/qt=q:95"
             alt="Logo-img"
             id="logo1"
           />
         </a>
-        <i class="fas fa-bars menu-toggle"></i>
+        <div class="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </div>
         <div class="pages">
-          <a href="homepage.html">HOME</a>
+          <a href="">HOME</a>
           <a href="">LISTINGS</a>
           <a href="">LET'S MOVE</a>
           <a href="">ABOUT</a>
@@ -35,7 +38,7 @@
         <div class="sec1-1">
           <h1>PAHRUMP</h1>
           <h1>REALTOR</h1>
-          <h2>MARCI METZGER - THE RIDGE REALITY GROUP</h2>
+          <h2>MARCI METZGER - THE RIDGE REALTY GROUP</h2>
           <br />
           <br />
           <button class="call" id="call">CALL NOW</button>
@@ -51,24 +54,24 @@
         </div>
         <div class="sec2-2">
           <p>
-            Realtor for nearly 3 decades, lorem ipsum, dolor sit amet
-            consectetur adipisicing elit. Minima unde quaerat nisi consequuntur
-            praesentium sunt quisquam, quod odit minus. Rem rerum reprehenderit
-            pariatur porro architecto at libero ipsum nesciunt dolore.
+            Realtor for nearly 3 decades, Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Vel blanditiis ipsam officiis
+            accusantium natus, ratione debitis praesentium inventore possimus
+            quas earum tempore libero provident modi eius expedita dicta quam
+            dolorem suscipit consequatur magni porro quia saepe. Veniam libero
+            fugit, in quo tempore corrupti repellat qui exercitationem, tenetur
+            soluta atque deserunt.
           </p>
           <div class="social-container">
             <div class="social-card facebook" id="social1">
               <i class="fab fa-facebook-f"></i>
             </div>
-
             <div class="social-card instagram" id="social2">
               <i class="fab fa-instagram"></i>
             </div>
-
             <div class="social-card linkedin" id="social3">
               <i class="fab fa-linkedin-in"></i>
             </div>
-
             <div class="social-card yelp" id="social4">
               <i class="fab fa-yelp"></i>
             </div>
@@ -85,7 +88,6 @@
             quo ex expedita nesciunt.
           </p>
         </div>
-
         <div class="secondSec">
           <div class="horizontal-line"></div>
           <div class="secondSec-display">
@@ -99,7 +101,6 @@
               we want to make sure our best is better every year.
             </p>
           </div>
-
           <div class="horizontal-line"></div>
           <div class="secondSec-display">
             <img alt="Don't Just List it..." id="img3" />
@@ -110,7 +111,6 @@
               your home.
             </p>
           </div>
-
           <div class="horizontal-line"></div>
           <div class="secondSec-display">
             <img alt="Guide to Buyers" id="img4" />
@@ -135,7 +135,6 @@
             <input type="radio" name="radio-btn" id="radio5" />
             <input type="radio" name="radio-btn" id="radio6" />
             <input type="radio" name="radio-btn" id="radio7" />
-
             <div class="st first"><img alt="" id="slide1" /></div>
             <div class="st"><img alt="" id="slide2" /></div>
             <div class="st"><img alt="" id="slide3" /></div>
@@ -143,7 +142,6 @@
             <div class="st"><img alt="" id="slide5" /></div>
             <div class="st"><img alt="" id="slide6" /></div>
             <div class="st"><img alt="" id="slide7" /></div>
-
             <div class="nav-auto">
               <div class="a-b1"></div>
               <div class="a-b2"></div>
@@ -153,7 +151,6 @@
               <div class="a-b6"></div>
               <div class="a-b7"></div>
             </div>
-
             <div class="nav-m">
               <label for="radio1" class="m-btn"></label>
               <label for="radio2" class="m-btn"></label>
@@ -172,12 +169,10 @@
           <h1>Find Your Dream Home</h1>
           <i class="fas fa-search"></i>
         </div>
-
         <div class="modal" id="modal1">
           <div class="modal-inner large-modal">
             <button class="close-btn" id="closeModal1">&times;</button>
             <h2 class="modal-title">Search Listings</h2>
-
             <form class="search-form" id="searchForm">
               <div class="form-grid">
                 <div class="form-group">
@@ -186,14 +181,12 @@
                     <option value="">Select Location</option>
                   </select>
                 </div>
-
                 <div class="form-group">
                   <label>Type</label>
                   <select required>
                     <option value="">Select Type</option>
                   </select>
                 </div>
-
                 <div class="form-group">
                   <label>Sort By</label>
                   <select required>
@@ -208,7 +201,6 @@
                     <option>Bathrooms (High to Low)</option>
                   </select>
                 </div>
-
                 <div class="form-group">
                   <label>Bedrooms</label>
                   <select required>
@@ -222,7 +214,6 @@
                     <option>6+</option>
                   </select>
                 </div>
-
                 <div class="form-group">
                   <label>Baths</label>
                   <select required>
@@ -235,18 +226,15 @@
                     <option>6+</option>
                   </select>
                 </div>
-
                 <div class="form-group">
                   <label>Min Price</label>
                   <input type="number" placeholder="₱ Min" required />
                 </div>
-
                 <div class="form-group">
                   <label>Max Price</label>
                   <input type="number" placeholder="₱ Max" required />
                 </div>
               </div>
-
               <div class="button-row">
                 <button type="button" class="view-map" id="openMapModal">
                   <i class="fas fa-map-marked-alt"></i> View Map
@@ -271,15 +259,13 @@
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2798893626!2d-74.25986688446683!3d40.697670067648454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQxJzUxLjYiTiA3NMKwMTUnMTQuNiJX!5e0!3m2!1sen!2sph!4v1689351682736!5m2!1sen!2sph"
               allowfullscreen
               loading="lazy"
-            >
-            </iframe>
+            ></iframe>
           </div>
         </div>
       </section>
 
       <section class="section6">
         <h2>Our Services</h2>
-
         <div class="service-container">
           <div class="service-card">
             <img alt="Real Estate Done Right" id="img5" />
@@ -290,7 +276,6 @@
               possible!
             </p>
           </div>
-
           <div class="service-card">
             <img alt="Commercial & Residential" id="img6" />
             <h3>Commercial & Residential</h3>
@@ -299,7 +284,6 @@
               right price. Luxury? Fixer-upper? We can help with it all!
             </p>
           </div>
-
           <div class="service-card">
             <img alt="Rely on Expertise" id="img7" />
             <h3>Rely on Expertise</h3>
@@ -314,52 +298,76 @@
 
       <section class="section7">
         <h2 class="section-title">Call or Visit</h2>
-
         <div class="contact-container">
-          <div class="contact-form">
-            <h3>Send a Message</h3>
-            <form>
-              <label>Name</label>
-              <input type="text" placeholder="Your Name" required />
-
-              <label>Email *</label>
-              <input type="email" placeholder="Your Email" required />
-
-              <label>Message</label>
-              <textarea placeholder="Your Message" rows="4"></textarea>
-
-              <button type="submit" class="btn-send">Send</button>
-            </form>
-          </div>
-
           <div class="contact-info">
             <div class="info-card">
-              <button class="whatsapp-btn">
-                <i class="fab fa-whatsapp"></i> Message us on WhatsApp
-              </button>
-
               <div class="info-details">
                 <h4>Marci Metzger – The Ridge Realty Group</h4>
-                <p>
-                  3190 HW-160, Suite F<br />Pahrump, Nevada 89048, United States
-                </p>
-                <p><a href="tel:+12069196886">(206) 919-6886</a></p>
+                <p></p>
               </div>
 
               <div class="office-hours">
                 <h4>Office Hours</h4>
                 <div class="today" id="todayHours"></div>
-
                 <div class="dropdown" id="hoursDropdown">
                   <ul id="hoursList"></ul>
                 </div>
+                <small>
+                  Appointments outside office hours available upon request.
+                </small>
+                <br />
 
-                <small
-                  >Appointments outside office hours available upon
-                  request.</small
-                >
+                <div class="support">
+                  <div>
+                    <header>Email Support</header>
+                    <p>example@example.com</p>
+                  </div>
+                  <div>
+                    <header>Visit Our Office</header>
+                    <p>
+                      3190 HW-160, Suite F<br />Pahrump, Nevada 89048, United
+                      States
+                    </p>
+                  </div>
+                  <div>
+                    <header>Call Us</header>
+                    <p><a href="tel:+12069196886">(206) 919-6886</a></p>
+                  </div>
+                </div>
+
+                <br />
+
+                <div class="contact-buttons">
+                  <button class="whatsapp-btn" id="watsapp">
+                    <i class="fab fa-whatsapp"></i> Message us on WhatsApp
+                  </button>
+
+                  <div class="divider">
+                    <span>or</span>
+                  </div>
+
+                  <button id="openModalBtn" class="message-btn">
+                    <i class="fas fa-envelope"></i> Send a Message
+                  </button>
+                </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="modal" id="contactModal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Send a Message</h3>
+            <form>
+              <label>Name</label>
+              <input type="text" placeholder="Your Name" required />
+              <label>Email *</label>
+              <input type="email" placeholder="Your Email" required />
+              <label>Message</label>
+              <textarea placeholder="Your Message" rows="4"></textarea>
+              <button type="submit" class="btn-send">Send</button>
+            </form>
           </div>
         </div>
       </section>
@@ -386,7 +394,6 @@
           ><i class="fab fa-yelp"></i
         ></a>
       </div>
-
       <div class="footer-text">
         <p>© 2025 Marci Metzger Homes — All Rights Reserved</p>
         <div class="divider"></div>
@@ -395,7 +402,6 @@
           <img src="images/godaddy-logopng.png" alt="GoDaddy Airo" />
         </p>
       </div>
-
       <div class="footer-logos">
         <img id="logo2" class="blackimg" />
         <img id="logo3" alt="Equal Housing Opportunity" />
